# bpl-next

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
bpl/: __init__.py  _util.py  base.py  dixon_coles.py  dynamic_dixon_coles.py  extended_dixon_coles.py  neutral_dixon_coles copy.py  neutral_dixon_coles.py  neutral_dixon_coles_WC.py
bpl/tests/: test_bpl.py
bpl_next/: __init__.py  base.py  dixon_coles.py  dynamic_dixon_coles.py  extended_dixon_coles.py  neutral_dixon_coles.py  neutral_dixon_coles_WC.py
tests/: conftest.py  test_all_models.py  test_base_models.py  test_dixon_coles.py  test_extended_dixon_coles.py  test_neutral_dixon_coles.py  test_neutral_dixon_coles_WC.py
