[tool.poetry]
name = "bpl"
version = "0.2.0"
description = ""
authors = ["Angus Williams <anguswilliams91@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpyro = "^0.12.1"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
