[tool.poetry]
name = "bpl"
version = "0.3.0"
description = ""
authors = ["Angus Williams <anguswilliams91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpyro = "^0.13.2"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
pylint = "^3.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
